# trend-data

./: pyproject.toml  setup.py  trend-data.py  trend_data.py
trend_data/: __init__.py
