[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "trend-data"
version = "2024.26.05"
description = ""
authors = ["John Smith <john@example.com>"]
readme = "README.md"
packages = [
    { include = "trend-data.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
metrics = {git = "https://github.com/BobryTeam/metrics.git", branch = "feature/pyproject"}